# fightgraphs-scraper

./: .gitignore  README.md  docker-compose.yml  logstash.conf  pyproject.toml
src/: scrapy.cfg
src/ufcstats_scraper/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
src/ufcstats_scraper/spiders/: event.py  fight.py  fighter.py  fighter_image.py
